--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
 						<h1 id="about" class="title text-center">About <span>Me</span></h1>
 						<div class="space"></div>
 						<h2><b>Summary</b></h2>
-						<p>I am Francisco Martínez-Martínez, an Artificial Intelligence scientist from Valencia (Spain). I hold an international PhD in Biomedical Engineering from the Polytechnic University of Valencia (2014). 
+						<p align='justify'>I am Francisco Martínez-Martínez, an Artificial Intelligence scientist from Valencia (Spain). I hold an international PhD in Biomedical Engineering from the Polytechnic University of Valencia (2014). 
 						I had the opportunity to develop part of my career abroad at Research Labs from <a href="http://www.imperial.ac.uk/" target="_blank">Imperial College of London</a>, 
 						<a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> and <a href="https://www.cvut.cz/en" target="_blank">Czech Technical University in Prague</a>. 
 						I am passionate about Deep Learning, more specifically applied to Natural Language Processing (NLP) since I love the idea of creating machines able to “understand” us.</p>
 						
-						<p>My curiosity and eagerness to learn leads me to try to improve my skills and knowledge on Deep Learning, Machine Learning, Data Science, Coding and Math. 
+						<p align='justify'>My curiosity and eagerness to learn leads me to try to improve my skills and knowledge on Deep Learning, Machine Learning, Data Science, Coding and Math. 
 						I am constantly reading and researching the latest state-of-the-art papers, models, technologies, etc., as well as developing my own personal projects.</p>
 						
-						<p>Currently, I am part of <a href="https://www.pcuv.es/en/empresas/biotecnologia/SANTA-BARBARA" target="_blank">Santa Barbara Smart Health</a>, 
+						<p align='justify'>Currently, I am part of <a href="https://www.pcuv.es/en/empresas/biotecnologia/SANTA-BARBARA" target="_blank">Santa Barbara Smart Health</a>, 
 						a company created in 2016 by <a href="https://www.freseniusmedicalcare.com/en/home/" target="_blank">Fresenius Medical Care</a>, 
 						world leader in products and services for patients with chronic renal failure. What I value the most about my job is creating expert systems that assist 
 						physicians and improve patients’ lives. </p>
