--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 												<!-- <h3>Project Description</h3> -->
 												<div class="row">
 													<div class="col-md-6">
-														<p>The goal of this project was to develop an alarm system that allows physicians to know whether a prescription is correct considering both the patient characteristics and the interaction with other drugs. The system uses drug information (warnings, side effect, indications and contraindications) that was automatically extracted from drug leaflets my means of the use of Natural Language Processing and Deep Learning. This information is used to build an expert system that assists physicians during drug prescription.</p>
+														<p>The goal of this project was to develop an alarm system that allows physicians to know whether a prescription is correct considering both the patient characteristics and the interaction with other drugs. The system uses drug information (warnings, side effect, indications and contraindications) that was automatically extracted from drug leaflets by means of the use of Natural Language Processing and Deep Learning. This information is used to build an expert system that assists physicians during drug prescription.</p>
 													</div>
 													<div class="col-md-6">
 														<img src="images/drugchecker_overview.png" alt="">
