added logo and link to my github webpage

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 							<div class="text-center">
 								<a href="https://twitter.com/fran_martinez84" target="_blank"><i class="fa fa-twitter-square" style="font-size:42px"></i></a>
 								<a href="https://www.linkedin.com/in/francisco-mart%C3%ADnez-mart%C3%ADnez-phd-b1758672/" target="_blank"><i class="fa fa-linkedin-square", style="font-size:42px"></i></a>
+								<a href="https://github.com/fran-martinez" target="_blank"><i class="fa fa-github-square" style="font-size:42px"></i></a>
 							</div>
 						</div>
 					</div>
@@ -1004,6 +1005,7 @@
 								<ul class="social-links">
 									<a href="https://twitter.com/fran_martinez84" target="_blank"><li class="twitter"><i class="fa fa-twitter-square"></i></li></a>
 									<a href="https://www.linkedin.com/in/francisco-mart%C3%ADnez-mart%C3%ADnez-phd-b1758672/" target="_blank"><li class="linkedin"><i class="fa fa-linkedin-square"></i></li></a>
+									<a href="https://github.com/fran-martinez" target="_blank"><li class="github"><i class="fa fa-github-square"></i></li>
 								</ul>
 							</div>
 						</div>
