--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
 								<ul class="social-links">
 									<a href="https://twitter.com/fran_martinez84" target="_blank"><li class="twitter"><i class="fa fa-twitter-square"></i></li></a>
 									<a href="https://www.linkedin.com/in/francisco-mart%C3%ADnez-mart%C3%ADnez-phd-b1758672/" target="_blank"><li class="linkedin"><i class="fa fa-linkedin-square"></i></li></a>
-									<a href="https://github.com/fran-martinez" target="_blank"><li class="github"><i class="fa fa-github-square"></i></li>
+									<a href="https://github.com/fran-martinez" target="_blank"><li class="github"><i class="fa fa-github-square"></i></li></a>
 								</ul>
 							</div>
 						</div>
@@ -1024,7 +1024,7 @@
 									</div>
 									<div class="form-group has-feedback">
 										<label class="sr-only" for="message">Message</label>
-										<textarea class="form-control" rows="10 id="message" placeholder="Message" name="message" required></textarea>
+										<textarea class="form-control" rows="10" id="message" placeholder="Message" name="message" required></textarea>
 										<i class="fa fa-pencil form-control-feedback"></i>
 									</div>
 									<input type="submit" value="Send" class="btn btn-default">
@@ -1068,6 +1068,10 @@
 		
 		<!-- Format output of contact form -->
 		<script data-cfasync="false" type="text/javascript" src="js/form-submission-handler.js"></script>
+
+		<!-- reCAPTCHA v3  -->
+		<script src="https://www.google.com/recaptcha/api.js"></script>
+		<script>function onSubmit(token) {document.getElementById("demo-form").submit();}</script>
 
 	</body>
 </html>
