--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-1-label">Automatically extraction of structured information from clinical records</h4>
+												<h4 class="modal-title" id="project-1-label">Automated extraction of structured information from clinical records</h4>
 											</div>
 											<div class="modal-body">
 												<!-- <h3>Project Description</h3> -->
@@ -1027,7 +1027,7 @@
 										<textarea class="form-control" rows="10" id="message" placeholder="Message" name="message" required></textarea>
 										<i class="fa fa-pencil form-control-feedback"></i>
 									</div>
-									<input type="submit" value="Send" class="btn btn-default">
+									<button class="g-recaptcha btn btn-default" data-sitekey="6Lc3IscZAAAAANvUqvR557xXhmz9TOEuEpoYyL1Z" data-callback='onSubmit' data-action='submit'>Send</button>
 									<div style="display:none" class="thankyou_message">
 									 <h4><span>Thank you for contacting me. I will get back to you soon.</span></h4>
 									</div>
