changed link for Biomechanics group ETH

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 						<div class="media">
 							<div class="media-body text-left">
 								<h4 class="media-heading">Visiting research assistant</h4> 
-								<h5><em><a href="https://imes.ethz.ch/people/Prof-Dr-Edoardo-Mazza.html" target="_blank">Biomechanics group</a>,
+								<h5><em><a href="https://imes.ethz.ch/the-institute/research/experimental-continuum-mechanics.html" target="_blank">Experimental Continuum Mechanics group</a>,
 									<a href="https://imes.ethz.ch/" target="_blank">Institute for Mechanical Systems (IMES)</a>,
 									<a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a></em></h5>
 								<p><em>June 2012-September 2012</em></p>
