added new classes on Master A^3I

--- a/index.html
+++ b/index.html
@@ -337,6 +337,13 @@
 					<div class="col-md-9 col-md-offset-2">
 						<div class="media">
 							<div class="media-body text-left">
+								<h4 class="media-heading">"Deep Learning I" and "Natural Language Processing"</h4>
+								<h5><em><a href=https://idal.uv.es/master_ia3/" target="_blank">M. on Advanced and Applied Artificial Intelligence</a>, <a href="https://www.uv.es/" target="_blank">University of Valencia</a></em></h5>
+								<p><em>November 2020 - May 2021</em></p>
+							</div>
+						</div>
+						<div class="media">
+							<div class="media-body text-left">
 								<h4 class="media-heading">Introduction to Deep Learning</h4> 
 								<h5><em><a href="https://www.mbitschool.com/" target="_blank">MBIT School</a></em></h5> 
 								<p><em>September 2018</em></p>
@@ -345,7 +352,7 @@
 						<div class="media">
 							<div class="media-body text-left">
 								<h4 class="media-heading">Mathematics III (Laboratory)</h4> 
-								<h5><em>M. Eng. on Electronics and Telecommunications, <a href="https://www.uv.es/" target="_blank">University of Valencia</a></em></h5> 
+								<h5><em>M. Eng. on Electronics and Telecommunications, <a href="https://www.uv.es/" target="_blank">University of Valencia</a></em></h5>
 								<p><em>2nd semester 2017</em></p>
 							</div>
 						</div>
@@ -396,7 +403,7 @@
 							<div class="media-body text-left">
 								<h4 class="media-heading">DrugChecker: Aiding doctors during drug prescription</h4> 
 								<h5><em>Seminar in the Master's Degree in Artificial Intelligence , <a href="https://www.universidadviu.es/" target="_blank">Valencian International University</a></em></h5> 
-								<p><em>November 2019 & June 2020</em></p>
+								<p><em>November 2019 & June 2020 & November 2020</em></p>
 							</div>
 						</div>
 						<div class="media">
