--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</div>
 							<h1 class="text-center"><span>Francisco Martínez</span> PhD</h1>
 							<h2 class="lead text-center"><b>Data & Applied Scientist</b></h2>
-							<h2 class="lead text-center"><a href="https://www.microsoft.com/en-us/research/group/msai/" style="color:#FFFFFF;" target="_blank">Microsoft Search, Assistant and Intelligence</a>, <a href="https://www.microsoft.com/" style="color:#FFFFFF;" target="_blank">Microsoft</a></h2>
+							<h2 class="lead text-center"><a href="https://www.microsoft.com/en-us/research/group/msai/" style="color:#FFFFFF;" target="_blank">Microsoft Search, Assistant and Intelligence</a>- <a href="https://www.microsoft.com/" target="_blank">Microsoft</a></h2>
 							<div class="text-center">
 								<a href="https://twitter.com/fran_martinez84" target="_blank"><i class="fa fa-twitter-square" style="font-size:42px"></i></a>
 								<a href="https://www.linkedin.com/in/francisco-mart%C3%ADnez-mart%C3%ADnez-phd-b1758672/" target="_blank"><i class="fa fa-linkedin-square", style="font-size:42px"></i></a>
@@ -134,7 +134,7 @@
 						<h1 id="about" class="title text-center">About <span>Me</span></h1>
 						<div class="space"></div>
 						<h2><b>Summary</b></h2>
-						<p align='justify'>I am Francisco Martínez-Martínez, a Data & Applied Scientist at <a href="https://www.microsoft.com/"target="_blank">Microsoft. I hold an international PhD in Biomedical Engineering
+						<p align='justify'>I am Francisco Martínez-Martínez, a Data & Applied Scientist at <a href="https://www.microsoft.com/"target="_blank">Microsoft</a>. I hold an international PhD in Biomedical Engineering
 							from the <a href="http://www.upv.es/" target="_blank">Polytechnic University of Valencia</a> (2014).
 							I was born in Valencia but I had the opportunity to develop part of my career abroad at Research Labs from <a href="http://www.imperial.ac.uk/" target="_blank">Imperial College of London</a>,
 							<a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> and <a href="https://www.cvut.cz/en" target="_blank">Czech Technical University in Prague</a>.
@@ -231,7 +231,7 @@
 						<div class="media">
 							<div class="media-body text-left">
 								<h4 class="media-heading">Data & Applied Scientist</h4> 
-								<h5><em><a href=""https://www.microsoft.com/en-us/research/group/msai/" target="_blank">Microsoft Search, Assitant and Intelligence</a>,
+								<h5><em><a href=""https://www.microsoft.com/en-us/research/group/msai/" target="_blank">Microsoft Search, Assitant and Intelligence</a>-
 									<a href="https://www.microsoft.com/" target="_blank">Microsoft</a></em></h5>
 								<p><em>February 2021-Nowadays</em></p>
 							</div>
