--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
 						<h1 id="about" class="title text-center">About <span>Me</span></h1>
 						<div class="space"></div>
 						<h2><b>Summary</b></h2>
-						<p align='justify'>I am Francisco Martínez-Martínez, a Data & Applied Scientist at <a href="https://www.microsoft.com/"target="_blank">Microsoft</a>. I hold an international PhD in Biomedical Engineering
-							from the <a href="http://www.upv.es/" target="_blank">Polytechnic University of Valencia</a> (2014).
-							I was born in Valencia but I had the opportunity to develop part of my career abroad at Research Labs from <a href="http://www.imperial.ac.uk/" target="_blank">Imperial College of London</a>,
-							<a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> and <a href="https://www.cvut.cz/en" target="_blank">Czech Technical University in Prague</a>.
-							I am passionate about Deep Learning, more specifically applied to Natural Language Processing (NLP) since I love the idea of creating machines able to “understand” us.</p>
+						<p align='justify'>I am Francisco Martínez-Martínez a Data & Applied Scientist at <a href="https://www.microsoft.com/"target="_blank">Microsoft</a> and I hold an international PhD in Biomedical Engineering
+							from the <a href="http://www.upv.es/" target="_blank">Polytechnic University of Valencia</a> (2014).</p>
+				
+						<p align='justify'>I am passionate about Deep Learning, more specifically applied to Natural Language Processing (NLP) since I love the idea of creating machines able to “understand” us.</p>
 						
 						<p align='justify'>My curiosity and eagerness to learn leads me to try to improve my skills and knowledge on Deep Learning, Machine Learning, Data Science, Coding and Math. 
 							I am constantly reading and researching the latest state-of-the-art papers, models, technologies, etc., as well as developing my own personal projects.</p>
