--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 						<div class="media">
 							<div class="media-body text-left">
 								<h4 class="media-heading">Data & Applied Scientist</h4> 
-								<h5><em><a href=""https://www.microsoft.com/en-us/research/group/msai/" target="_blank">Microsoft Search, Assitant and Intelligence</a> -
+								<h5><em><a href="https://www.microsoft.com/en-us/research/group/msai/" target="_blank">Microsoft Search, Assitant and Intelligence</a> -
 									<a href="https://www.microsoft.com/" target="_blank">Microsoft</a></em></h5>
 								<p><em>February 2021-Nowadays</em></p>
 							</div>
